# fastapi-boilerplate-large

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  setup.cfg
database/migrations/versions/: 4779b78a998c_create_users_table.py
docs/: introduction.md
docs/features/: index.md
src/: config.py  main.py
src/app/blog/: __init__.py  factory.py  types.py
src/app/blog/application/use_cases/: user_creator.py  user_logger.py
src/app/blog/domain/: article.py  article_repository.py  user.py  user_repository.py
src/app/blog/domain/errors/: article_not_found.py  login_error.py  user_aready_exits.py  user_not_following.py  user_not_found.py  username_aready_exits.py
src/app/blog/domain/events/: user_created.py  user_followed.py  user_unfollowed.py  user_updated.py
src/app/blog/infrastructure/mappers/: user_mapper.py
src/app/blog/infrastructure/server/: user_dtos.py  user_error_handlers.py  user_routes.py
src/app/blog/infrastructure/storage/: article_repository_memory.py  user_repository_memory.py  user_repository_mongodb.py
src/app/blog/use_cases/: user_creator.py
src/app/shared/: __init__.py  factory.py  types.py
src/app/shared/domain/: domain_error.py  domain_model.py  token_data.py
src/app/shared/domain/errors/: invalid_credentials.py
src/app/shared/domain/events/: domain_event.py  event_types.py
src/app/shared/domain/services/: jwt_service.py  password_service.py
src/app/shared/infrastructure/services/: jwt_service_jose.py  jwt_service_oauth.py  password_service_argon.py  password_service_fake.py
src/app/shared/services/: factories.py
src/app/shared/services/infrastructure/: password_service_argon.py  password_service_fake.py
src/application/articles/domain/: article.py  article_repository.py
src/application/users/domain/: user.py  user_repository.py
src/application/users/domain/value_objects/: email_address.py  full_name.py  password_hash.py
src/shared/domain/: domain_model.py
src/shared/domain/errors/: arguments_error.py  domain_error.py  domain_error_code.py
src/shared/domain/events/: domain_event.py
src/shared/domain/hex/: aggregate_root.py  domain_service.py  single_value_object.py  value_object.py
src/shared/domain/value_objects/: datetime_wrapper.py  domain_id.py
tests/blog/use_cases/: test_user_creator.py
tests/shared/services/: test_password_service_argon2.py  test_password_service_fake.py
