[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py311"]

[tool.isort]
# https://github.com/timothycrosley/isort/
profile = "black"
src_paths = ["src", "tests"]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
known_first_party = "tests,src"
known_third_party = "pydantic,fastapi,passlib,jose"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100
force_alphabetical_sort_within_sections = true

[tool.mypy]
# https://github.com/python/mypy
# plugins = "pydantic.mypy, sqlmypy"
ignore_missing_imports = true
disallow_untyped_defs = true
python_version = 3.11
pretty = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[tool.pytest.ini_options]
# https://github.com/pytest-dev/pytest/
asyncio_mode = "auto"
pythonpath = "src"
testpaths = "tests"
python_files = "test_*.py"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
# fail_under = 50
exclude_lines = [
"raise AssertionError",
"raise NotImplementedError",
"if __name__ == .__main__.:",
"@(abc\\.)?abstractmethod"
]
ignore_errors = true
