
[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py311"]

[tool.isort]
# https://github.com/timothycrosley/isort/
profile = "black"
src_paths = ["src", "tests"]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
known_first_party = "tests,src"
known_third_party = "pydantic,fastapi,passlib,jose"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100
force_alphabetical_sort_within_sections = true

[tool.mypy]
# https://github.com/python/mypy
# plugins = "pydantic.mypy, sqlmypy"
ignore_missing_imports = true
disallow_untyped_defs = true
python_version = 3.11
pretty = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[tool.pytest.ini_options]
# https://github.com/pytest-dev/pytest/
asyncio_mode = "auto"
pythonpath = "src"
testpaths = "tests"
python_files = "test_*.py"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
# fail_under = 50
exclude_lines = [
"raise AssertionError",
"raise NotImplementedError",
"if __name__ == .__main__.:",
"@(abc\\.)?abstractmethod"
]
ignore_errors = true

[tool.poetry]
name = "fastapi-boilerplate-large"
version = "0.1.0"
description = ""
authors = ["Miguel G. Rubin <miguelgr1988@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
passlib = {extras = ["argon2"], version = "^1.7.4"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = {extras = ["all"], version = "^0.95.1"}
rich = "^13.3.4"
typer = "^0.7.0"
arrow = "^1.2.3"
pydantic = "^1.10.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
mypy = "^1.2.0"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
faker = "^18.4.0"
freezegun = "^1.2.2"
isort = "^5.12.0"
coverage = {extras = ["toml"], version = "^7.2.3"}
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
